--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,21 +8,45 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to 'Contact List', root_url, class: 'navbar-brand' %>
+      <%= link_to 'Contact List', '#', class: 'navbar-brand' %>
     </div>
 
   <!-- Conteudo exibido em telas maiores e que serao escondidos em telas menores -->
   <div class="collapse navbar-collapse" id="expanded-menu">
     <ul class="nav navbar-nav">
+      <% if true %>
         <li class="active">
-            <a href="#">Nova Conta</a>
+          <%= link_to 'Nova Conta', '#' %>
         </li>
+      <% end %>
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
+
+      <% if false %>
         <li>
-            <%= link_to 'Entrar', '#' %>
+          <%= link_to 'Entrar', '#' %>
+        </li
+      <% else %>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            bem vindo, Shlomi <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu">
+            <li>
+              <%= link_to 'Minha Pagina', '#' %>
+            </li>
+            <li>
+              <%= link_to 'Editar', '#' %>
+            </li>
+            <li class="divider" role="separator"></li>
+            <li>
+              <%= link_to 'Sair', '#' %>
+            </li>
+          </ul>
         </li>
+      <% end %>
+
     </ul>
 
   </div>
